--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,86 +1,1 @@
-<div class="container">
-    <div class="row justify-content-md-center">
-        <div class="col-6">
-
-            <div class="card mt-3 mb-3">
-                <div class="card-header">
-                    <h5 class="card-title">Form Builder</h5>
-                </div>
-                <div class="card-body">
-                    <ng-container *ngFor="let rowFormGroup of dynamicForms.controls;let rowIndex=index;">
-
-                        <ngx-primeng-form [form]="rowFormGroup" [items]="dynamicFormItems">
-                            <!--Custom-->
-                            <ng-template formTemplate="custom" let-control="control">
-                                <ng-container *ngIf="control.controlName==='validation'">
-                                    <div class="row" [formGroup]="rowFormGroup.controls['validation']">
-                                        <div class="col-md-12">
-                                            <p-checkbox
-                                                [formControl]="rowFormGroup.controls['validation'].controls['required']"
-                                                [binary]="true" label="Required"></p-checkbox>
-                                        </div>
-                                        <div class="col-md-6 mt-2">
-                                            <div class="form-group">
-                                                <label>Min. Length</label>
-                                                <input class="form-control" formControlName="minLength">
-                                            </div>
-                                        </div>
-                                        <div class="col-md-6">
-                                            <label>Max. Length</label>
-                                            <input class="form-control" formControlName="maxLength">
-                                        </div>
-                                        <div class="col-md-12">
-                                            <label>Regex</label>
-                                            <input class="form-control" formControlName="regex">
-                                        </div>
-                                    </div>
-                                </ng-container>
-                            </ng-template>
-                            <!--Placeholder-->
-                            <ng-template formTemplate="placeholder" let-control="control">
-                                <div class="mt-4">
-                                    <ng-container *ngIf="control.controlName==='action'">
-                                        <button type="button" class="btn btn-sm btn-secondary mr-1"
-                                            (click)="btnUpdate(rowFormGroup)">Update</button>
-                                        <button type="button" class="btn btn-sm btn-danger mr-1"
-                                            (click)="btnDelete(rowIndex)">Delete</button>
-                                        <button type="button" class="btn btn-sm btn-primary"
-                                            (click)="btnAdd(rowIndex)">Add
-                                            New</button>
-                                    </ng-container>
-
-                                </div>
-                            </ng-template>
-                        </ngx-primeng-form>
-
-                    </ng-container>
-
-                </div>
-            </div>
-
-            <div class="card mt-3 mb-3">
-                <div class="card-header">
-                    <h5 class="card-title">JSON</h5>
-                </div>
-                <div class="card-body" style="max-height: 500px;overflow-y:auto">
-                    <pre>{{formItems|json}}</pre>
-                </div>
-            </div>
-        </div>
-        <div class="col-md-6">
-            <div class="card mt-3 mb-3">
-                <div class="card-header">
-                    <h5 class="card-title">Form Builder Result</h5>
-                </div>
-                <div class="card-body">
-                    <ngx-primeng-form [form]="form" [items]="formItems">
-                    </ngx-primeng-form>
-                </div>
-                <div class="card-footer">
-                    <button type="button" class="btn btn-sm btn-primary" (click)="submit()">Submit</button>
-                </div>
-            </div>
-        </div>
-    </div>
-
-</div>
+<router-outlet></router-outlet>
