--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
-<div class="container">
+<div class="container content-section">
+    
     <ngx-primeng-form [form]="form" [items]="formItems">
 
         <!--Custom control-->
